Fixes loading covering entire screen

--- a/css/build.css
+++ b/css/build.css
@@ -1,3 +1,6 @@
+.lock-wrapper {
+    position: relative;
+}
 /* LIST STYLES */
 .list.list-default ul {
     padding: 0;
